--- a/layers/roads.yaml
+++ b/layers/roads.yaml
@@ -15,13 +15,14 @@ layers:
                     outline:
                         order: global.order
         bridges_and_tunnels:
-            filter: { any: [is_bridge: yes, is_tunnel: yes] }
+            filter: { any: [is_bridge: true, is_tunnel: true] }
             draw:
                 lines:
                     outline:
                         order: global.order
-        natural_earth_highways:
-            filter: { source: 'naturalearthdata.com' }
+        natural_earth_roads:
+            filter:
+                - $zoom: { min: 5, max: 8 }
             draw:
                 lines:
                     style: roads-glow
@@ -35,7 +36,7 @@ layers:
                     #     color: [0.541,0.969,0.949]
                     #     width: [[5,0px],[6,0px]]
             major_road:
-                filter: { type: ['Secondary Highway','Road'] }
+                filter: { kind: major_road }
                 draw:
                     lines:
                         color: [[5,[0.463,0.800,0.824]],[6,[0.541,0.969,0.949]]]
@@ -43,14 +44,16 @@ layers:
                         # outline:
                         #     width: 1px
             minor_road:
-                filter: { type: 'Unknown' }
+                filter: { kind: minor_road }
                 draw:
                     lines:
                         color: [0.333,0.518,0.612]
                         width: 0.5px
 
         highway:
-            filter: { kind: highway }
+            filter:
+                - kind: highway
+                - $zoom: { min: 8 }
             highway-z8:
                 filter:
                     $zoom: { min: 8, max: 11 }
@@ -87,7 +90,7 @@ layers:
                         width: [[11,8px],[13,12px],[16,30px],[17,40px],[18,50px],[19,80px]]
 
                 highway-link:
-                    filter: { is_link: yes } # on- and off-ramps, etc
+                    filter: { is_link: true } # on- and off-ramps, etc
                     draw:
                         lines:
                             width: [[8,0px],[9,0px],[11,0.25px],[12,0.25px],[13,1px],[14,1.5px],[15,2px],[17,3px],[18,9px],[19,12px],[20,20px]]
@@ -122,7 +125,7 @@ layers:
                                     visible: false
 
                 highway-tunnel:
-                    filter: { is_tunnel: yes, $zoom: { min: 13 } }
+                    filter: { is_tunnel: true, $zoom: { min: 13 } }
                     draw:
                         lines:
                             color: [0.201,0.286,0.409]
@@ -147,7 +150,7 @@ layers:
                             color: [0.073,0.435,0.908]
                     highway-tunnel-link:
                         filter:
-                            is_link: yes
+                            is_link: true
                         draw:
                             highway-dashed:
                                 visible: false
@@ -194,7 +197,9 @@ layers:
                         width: [[8,0px],[16,0px],[17,15px],[18,34px],[19,45px]]
 
         major_road:
-            filter: { kind: major_road }
+            filter:
+                - kind: major_road
+                - $zoom: { min: 8 }
             draw:
                 lines:
                     # color: [0.086,0.135,0.260]
@@ -217,7 +222,7 @@ layers:
                             style: fast-traffic-animation
 
             trunk_primary:
-                filter: { highway: [trunk, primary] }
+                filter: { kind_detail: [trunk, primary] }
                 draw:
                     lines:
                         color: [[8,[0.418,0.754,0.736]],[12,[0.278,0.651,0.749]],[13,[0.086,0.135,0.260]]]
@@ -254,14 +259,14 @@ layers:
                                 color: [0.034,0.105,0.569]
                                 width: 6px
                     tunnel:
-                        filter: { is_tunnel: yes, $zoom: { min: 13 } }
+                        filter: { is_tunnel: true, $zoom: { min: 13 } }
                         draw:
                             lines:
                                 color: [0.201,0.286,0.409]
                                 outline:
                                     color: [0.276,0.568,0.950]
             link:
-                filter: { is_link: yes }
+                filter: { is_link: true }
                 draw:
                     lines:
                         color: [0.086,0.135,0.260]
@@ -270,14 +275,14 @@ layers:
                             color: [0.039,0.980,1.000]
                             width: [[10,0px],[13,0.3px],[16,1px],[17,1.5px]]
             tunnel:
-                filter: { is_tunnel: yes, $zoom: { min: 13 } }
+                filter: { is_tunnel: true, $zoom: { min: 13 } }
                 draw:
                     lines:
                         color: [0.201,0.286,0.409]
                         outline:
                             color: [0.276,0.568,0.950]
             secondary:
-                filter: { highway: secondary }
+                filter: { kind_detail: secondary }
                 draw:
                     lines:
                         color: [[8,[0.418,0.754,0.736]],[12,[0.278,0.651,0.725]],[13,[0.086,0.135,0.260]]]
@@ -304,7 +309,7 @@ layers:
                                 color: [[13,[0.196,0.494,0.647]],[14,[0.000,0.466,0.650]]]
                                 width: [[12,0px],[13,0.5px],[14,0.75px],[15,1px],[17,1.25px],[18,1.5px]]
                     tunnel:
-                        filter: { is_tunnel: yes, $zoom: { min: 13 } }
+                        filter: { is_tunnel: true, $zoom: { min: 13 } }
                         draw:
                             lines:
                                 color: [0.201,0.286,0.409]
@@ -312,7 +317,7 @@ layers:
                                     color: [0.276,0.568,0.950]
 
             tertiary:
-                filter: { highway: [tertiary, tertiary_link] }
+                filter: { kind_detail: [tertiary, tertiary_link] }
                 draw:
                     lines:
                         color: [[12,[0.248,0.397,0.439]],[13,[0.248,0.397,0.439]],[14,[0.082,0.133,0.259]]]
@@ -329,14 +334,14 @@ layers:
                             outline:
                                 width: [[12,0px],[14,0.4px],[15,1px],[17,2px],[18,2px]]
                     tunnel:
-                        filter: { is_tunnel: yes, $zoom: { min: 13 } }
+                        filter: { is_tunnel: true, $zoom: { min: 13 } }
                         draw:
                             lines:
                                 color: [0.201,0.286,0.409]
                                 outline:
                                     color: [0.276,0.568,0.950]
                 link:
-                    filter: { is_link: yes }
+                    filter: { is_link: true }
                     draw:
                         lines:
                             width: [[13,0px],[15,1px],[16,2px],[17,4px],[18,7px],[19,10px],[20,20px]]
@@ -349,7 +354,10 @@ layers:
                             color: [0.208,0.106,0.271]
 
         minor_road:
-            filter: { kind: minor_road, not: { highway: service, aeroway: [runway, taxiway] } }
+            filter:
+                - kind: minor_road
+                - not: { kind_detail: service }
+                - $zoom: { min: 8 }
             draw:
                 lines:
                     color: [[12,[0.196,0.267,0.373]],[13,[0.173,0.224,0.318]],[14,[0.082,0.133,0.259]]]
@@ -363,10 +371,7 @@ layers:
                 filter:
                     $zoom: { min: 18 }
                     not:
-                        - service: parking_aisle
-                        - aeroway: taxiway
-                        - aeroway: runway
-                        - highway: service
+                        - kind_detail: [parking_aisle, service]
                 draw:
                     lines:
                         style: slow-traffic-animation-twoways
@@ -378,7 +383,7 @@ layers:
                             style: slow-traffic-animation
 
             tunnel:
-                filter: { is_tunnel: yes, $zoom: { min: 13 } }
+                filter: { is_tunnel: true, $zoom: { min: 13 } }
                 draw:
                     lines:
                         color: [0.184,0.263,0.373]
@@ -398,7 +403,7 @@ layers:
                         color: [0.208,0.106,0.271]
 
         service_road:
-            filter: { kind: minor_road, highway: service }
+            filter: { kind: minor_road, kind_detail: service }
             draw:
                 lines:
                     color: [[12,[0.248,0.397,0.439]],[13,[0.248,0.397,0.439]],[14,[0.082,0.133,0.259]]]
@@ -419,8 +424,7 @@ layers:
                 all:
                     - kind: [path,portage_way]
                 not:
-                    - highway: [steps,track]
-                    - man_made: [pier]
+                    - kind_detail: [steps,track,pier]
             draw:
                 lines:
                     color: [0.175,0.175,0.283]
@@ -429,7 +433,7 @@ layers:
                         color: [0.236,0.337,0.477]
                         width: [[14,0px],[15,0.35px],[16,1px],[17,2px],[19,3px]]
             pedestrian:
-                filter: { highway: pedestrian }
+                filter: { kind_detail: pedestrian }
                 draw:
                     lines:
                         color: [0.175,0.175,0.283]
@@ -439,7 +443,7 @@ layers:
                             width: [[14,0px],[15,0.35px],[16,1px],[17,2px],[19,3px]]
 
             corridor:
-                filter: { highway: corridor }
+                filter: { kind_detail: corridor }
                 draw:
                     lines:
                         order: 1000
@@ -477,7 +481,7 @@ layers:
                     lines:
                         color: [0.192,0.159,0.351]
             tunnel:
-                filter: { is_tunnel: yes }
+                filter: { is_tunnel: true }
                 draw:
                     lines:
                         color: [0.184,0.263,0.373]
@@ -485,7 +489,7 @@ layers:
                             width: 0px
 
         track:
-            filter: { kind: path, highway: track }
+            filter: { kind: path, kind_detail: track }
             draw:
                 lines:
                     color: [0.175,0.175,0.283]
@@ -514,7 +518,7 @@ layers:
             filter:
                 all:
                     - kind: path
-                    - highway: steps
+                    - kind_detail: steps
             draw:
                 lines:
                     style: steps-dashed
@@ -530,7 +534,7 @@ layers:
                         color: [0.208,0.106,0.271]
 
         pier:
-            filter: { kind: path, man_made: pier }
+            filter: { kind: path, kind_detail: pier }
             draw:
                 lines:
                     style: pier-overlay
@@ -551,14 +555,14 @@ layers:
         #                 width: 0px
 
         airport-lines:
-            filter: { kind: minor_road, aeroway: [runway,taxiway] }
+            filter: { kind: aeroway }
             draw:
                 lines:
                     order: global.order
                     color: [0.000,0.902,0.839]
                     width: 2px
             taxiway:
-                filter: { aeroway: taxiway }
+                filter: { kind_detail: taxiway }
                 draw:
                     lines:
                         # color: [[12,[1.000,0.518,0.424]],[16,[1.000,0.564,0.312]]]
@@ -567,7 +571,7 @@ layers:
                         outline:
                             width: 0px
             runway:
-                filter: { aeroway: runway }
+                filter: { kind_detail: runway }
                 # draw:
                 #     lines:
                 #         # color: [1.000,0.564,0.312]
